Fixes overflow scrollbar Switches preview badge / feedback order

--- a/src/webviews/apps/plus/graph/graph.scss
+++ b/src/webviews/apps/plus/graph/graph.scss
@@ -40,7 +40,8 @@ a {
 		flex-direction: row;
 		justify-content: space-between;
 		align-items: baseline;
-		gap: 0.5rem;
+		gap: 0.75rem;
+		overflow: hidden;
 
 		> * {
 			margin: 0;
@@ -58,6 +59,11 @@ a {
 
 	a {
 		color: inherit;
+
+		.codicon.codicon-feedback {
+			position: relative;
+			top: -2px;
+		}
 	}
 
 	:focus {
